--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "socket-chat-example",
+  "name": "node-chat-socket",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "node-chat-socket",
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^3.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node app_socket.js"
   }
 }
